Set up order history screen

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/27f5f52fe1.js"
+      crossorigin="anonymous"
+    ></script>
     <title>CocoTi Cosmetics</title>
   </head>
   <body>
